rename character grid to answer tile render highlighted path befor updating grid layout

--- a/SquaredleSolver/View/MainWindow.xaml
+++ b/SquaredleSolver/View/MainWindow.xaml
@@ -175,7 +175,7 @@
 
                 <ItemsControl.ItemTemplate>
                     <DataTemplate>
-                        <view:CharacterGrid Width="{Binding ElementName=AnswerSizeSlider, Path=Value}"/>
+                        <view:AnswerTile Width="{Binding ElementName=AnswerSizeSlider, Path=Value}"/>
                     </DataTemplate>
                 </ItemsControl.ItemTemplate>
             </ListView>
