--- a/SquaredleSolver/View/AnswerTile.xaml
+++ b/SquaredleSolver/View/AnswerTile.xaml
@@ -1,10 +1,10 @@
-﻿<UserControl x:Class="SquaredleSolver.View.CharacterGrid"
+﻿<UserControl x:Class="SquaredleSolver.View.AnswerTile"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:viewmodel="clr-namespace:SquaredleSolver.ViewModel"
-             d:DataContext="{d:DesignInstance Type=viewmodel:CharacterGridViewModel}"
+             d:DataContext="{d:DesignInstance Type=viewmodel:AnswerTileViewModel}"
              mc:Ignorable="d" 
              d:DesignHeight="100" 
              d:DesignWidth="100">
