allow user clicks to remove answer tiles simplify handling of scroll bars

--- a/SquaredleSolver/View/AnswerTile.xaml
+++ b/SquaredleSolver/View/AnswerTile.xaml
@@ -1,13 +1,15 @@
-﻿<UserControl x:Class="SquaredleSolver.View.AnswerTile"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:viewmodel="clr-namespace:SquaredleSolver.ViewModel"
-             d:DataContext="{d:DesignInstance Type=viewmodel:AnswerTileViewModel}"
-             mc:Ignorable="d" 
-             d:DesignHeight="100" 
-             d:DesignWidth="100">
+﻿<UserControl
+    x:Class="SquaredleSolver.View.AnswerTile"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:viewmodel="clr-namespace:SquaredleSolver.ViewModel"
+    d:DataContext="{d:DesignInstance Type=viewmodel:AnswerTileViewModel}"
+    mc:Ignorable="d" 
+    d:DesignHeight="100" 
+    d:DesignWidth="100"
+    MouseLeftButtonUp="UserControl_MouseLeftButtonUp">
 
     <Border
         BorderBrush="Black"
@@ -126,5 +128,4 @@
             <TextBlock Text="{Binding Answer.Word}" TextAlignment="Center"/>
         </StackPanel>
     </Border>
-
 </UserControl>
