make clear button clear all filters instead of just individual word filter

--- a/SquaredleSolver/View/MainWindow.xaml
+++ b/SquaredleSolver/View/MainWindow.xaml
@@ -116,10 +116,11 @@
                 </ItemsControl.ItemTemplate>
             </ListBox>
             <Button
+                Visibility="{Binding ElementName=VisualPuzzleFilter, Path=Visibility}"
                 Margin="{StaticResource spacing}"
                 Grid.Column="0"
-                Content="Clear"
-                Command="{Binding ClearAttemptedWords}"
+                Content="Clear Filters"
+                Command="{Binding ClearAnswerFilters}"
                 Width="100"/>
         </StackPanel>
 
