Change label for clarity

--- a/SquaredleSolver/View/MainWindow.xaml
+++ b/SquaredleSolver/View/MainWindow.xaml
@@ -92,7 +92,7 @@
             </Border>
             <TextBlock
                 Margin="{StaticResource spacing}"
-                Text="Excluded Words"
+                Text="Explicitly Excluded Words"
                 TextAlignment="Center"
                 Visibility="{Binding ElementName=VisualPuzzleFilter, Path=Visibility}"/>
             <ListBox
